--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="school.css" />
 
+    <!-- cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!---font awesome cdn-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css"
-        integrity="sha512-HHsOC+h3najWR7OKiGZtfhFIEzg5VRIPde0kB0bG2QRidTQqf+sbfcxCTB16AcFB93xMjnBIKE29/MjdzXE+qw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
@@ -44,96 +41,119 @@
                     </form>
                 </div>
                 <div class="col-md-2">
-                    <button v-on:click="showButton">Checkout {{ cartItem }}</button>
+                    <button v-on:click="showButton"> Add to cart {{ cartItem }}</button>
                 </div>
             </div>
         </nav>
         <!----->
         <h1>{{ sitename }}</h1>
-        <div v-if="showContent" class="lessonSpace"></div>
-        <div class="row">
-            <!-- main content -->
-            <div class="col-md-10">
-                <div id="lessonSection" class="row">
-                    <div class="col-md-6 col-lg-4" v-for="lesson in filteredLessons" :key="lesson.id">
-                        <div class="card mb-2 cards">
-                            <img :src="lesson.img" alt="lesson.subject" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title"> {{ lesson.subject }}
+        <div v-if="showContent" class="lessonSpace">
+
+
+            <div class="row">
+                <!-- main content -->
+                <div class="col-md-10">
+                    <div id="lessonSection" class="row">
+                        <div class="col-md-6 col-lg-4" v-for="lesson in filteredLessons" :key="lesson.id">
+                            <div class="card mb-2 cards">
+                                <img :src="lesson.img" alt="lesson.subject" class="card-img-top">
+                                <div class="card-text mb-0">
+                                    <i v-bind:class="lesson.icon" class="fa-2x"></i>
+                                </div>
+                                <div class="card-body">
+
+                                    <h5 class="card-title"> {{ lesson.subject }}
+                                </div>
+                                <div class="card-text mb-0">{{ lesson.location }}</div>
+                                <div class="card-text mb-0">{{ lesson.price }}</div>
+
+                                <div class="card-text mb-0">{{ lesson.spaces }}</div>
+                                <!---find a way to map, shopping cart vue js functionality-->
+                                <button class="btn btn-warning" v-on:click="addToCart(lesson)"
+                                    v-if="canAddToCart(lesson)">Add to
+                                    cart</button>
+                                <button v-else>Add to cart</button>
                             </div>
-                            <div class="card-text mb-0">{{ lesson.location }}</div>
-                            <div class="card-text mb-0">{{ lesson.price }}</div>
-                            <div class="card-text mb-0">{{ lesson.spaces - cartCount(lesson)}}</div> /
-                            <!---find a way to map, shopping cart vue js functionality-->
-                            <button class="btn btn-warning" v-on:click="addToCart(lesson)"
-                                v-if="canAddToCart(lesson)">Add to
-                                cart</button>
-                            <button v-else>Add to cart</button>
+
+                            <span v-if="lesson.spaces - cartCount(lesson.id) === 0">
+                                All Out!
+                            </span>
+
+                            <span v-else-if="lesson.spaces - cartCount(lesson.id) < 5">
+                                Only {{ lesson.spaces }} items left!!
+                            </span>
+                            <span v-else>
+                                Buy Now!!!
+                            </span>
+
                         </div>
+                    </div>
+                </div>
+                <!-- filter section -->
+                <div class="col-md-2">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <select v-model="sortFeature" class="form-control">
+                                <option value="subject">Subject</option>
+                                <option value="price">Price</option>
+                                <option value="location">Location</option>
+                                <option value="availability">Availabilty</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6">
+                            <select v-model="sortOption" class="form-control">
+                                <option value="ascending">Ascending</option>
+                                <option value="descending">Descending</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- cart page -->
+        <div v-else>
+            <div class="row">
+                <div class="col-md-6 col-lg-4" v-for="cartItem in cart">
+                    <div class="card mb-2 cards">
+                        <img :src="cartItem.lesson.img" alt="cartItem.lesson.subject" class="card-img-top">
+                        <div class="card-text mb-0">
+                            <i v-bind:class="cartItem.lesson.icon" class="fa-2x"></i>
+                        </div>
+                        <div class="card-body">
 
-                        <span v-if="lesson.spaces - cartCount(lesson.id) === 0">
-                            All Out!
-                        </span>
+                            <h5 class="card-title"> {{ cartItem.lesson.subject }}
+                        </div>
+                        <div class="card-text mb-0">{{ cartItem.lesson.location }}</div>
+                        <div class="card-text mb-0">{{ cartItem.lesson.price }}</div>
+                        <div class="card-text mb-0">{{ cartItem.spaces }}</div> /
+                        <!---find a way to map, shopping cart vue js functionality-->
+                        <button class="btn btn-warning" v-on:click="addToCart(cartItem)">Remove from cart
+                            cart</button>
+                    </div>
+                </div>
 
-                        <span v-else-if="lesson.spaces - cartCount(lesson.id) < 5">
-                            Only {{ lesson.spaces - cartCount(lesson.id)}} items left!!
-                        </span>
-                        <span v-else>
-                            Buy Now!!!
-                        </span>
-
+                <div class="row">
+                    <div class="col-md-4">
+                        <input v-model.trim="nameInput" placeholder="Name" name="strings" id="naming">
                     </div>
 
+                    <div class="col-md-4">
+                        <input v-model.number.trim="numberInput" placeholder="Phone Number" name="telephone"
+                            id="numbering">
+                    </div>
 
-
-
-
-                    <div class="row">
-
-                        <div class="col-md-4">
-                            <input v-model.trim="nameInput" placeholder="Name">
-                        </div>
-
-                        <div class="col-md-4">
-                            <input v-model.number.trim="numberInput" placeholder="Phone Number">
-                        </div>
-
-                        <p> {{ typeof(numberInput) }} {{ typeof(nameInput) }}</p>
-                        <div class="col-md-4">
-                            <button class="btn btn-primary" @click="checkBtn()">Checkout</button>
-                            <p>Status: {{ message }}</p>
-                        </div>
-
+                    <p> {{ typeof(numberInput) }} {{ typeof(nameInput) }}</p>
+                    <div class="col-md-4">
+                        <button class="btn btn-primary" v-on:click="checkBtn()">Checkout</button>
+                        <p>Status: {{ message }}</p>
                     </div>
 
                 </div>
-            </div>
-            <!-- filter section -->
-            <div class="col-md-2">
-
-                <select v-model="sortFeature">
-                    <option value="subject">Subject</option>
-                    <option value="price">Price</option>
-                    <option value="location">Location</option>
-                    <option value="availability">Availabilty</option>
-                </select>
-
-                <button v-on:click="filteredLessons"> Ascending</button>
 
             </div>
-        </div>
-
-
-        </div>
-        <div v-else>
-            <p>Checkout</p>
         </div>
         </div>
         <!-- to create a custom search filter, use a computed propertty -->
-
-
-
-
         </div>
 
         </div>
@@ -142,7 +162,7 @@
     </main>
 
     <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
